--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "server": "node server.js",
-    "start": "ng serve",
+    "start": "node server.js",
+    "ng-start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
